# quic-server-migration

./: .gitignore  COMPREHENSIVE_GUIDE.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  alt_svc_server.py  generate_fatima_explainer.py  generate_lb_taxonomy.py  inspect_traffic.py  quic_server.py  real_migration_demo.py  server_migration_demo.py
.github/workflows/: qns-pr.yml  qns.yml
application/: bibliography.bib  generate_applications.py  generate_ipfs_analysis.py  generate_related_work.py
application/poc/: generate_dns_anycast_doc.py  generate_health_check_doc.py  generate_ipfs_doc.py  generate_lb_doc.py  generate_webseed_doc.py
benchmarks/: run_benchmark.sh  run_concurrent.sh  run_multiserver.sh
benchmarks/results/: benchmark_20260612_170050.csv
ideas/: RESEARCH_TASKS.docx  RESEARCH_TASKS_DETAILED.docx  RESEARCH_TASKS_SHORT.tex  generate_quic_lb_ideas.py  generate_research_ideas.py  generate_secret_building_blocks.py  generate_task_detailed.py  generate_task_document.py  generate_task_short.py  generate_tls_key_derivation.py
implementations/neqo_server_migration/migration-test/: Cargo.toml
implementations/neqo_server_migration/migration-test/src/: health_check_preferred.rs  health_check_primary.rs  lb_frontend.rs  preferred_server.rs  primary_server.rs  webseed_primary.rs
implementations/neqo_server_migration/migration-test/src/transfer/: http_pull.rs  mod.rs  redis_kv.rs  redis_pubsub.rs  tcp_push.rs
implementations/neqo_server_migration/migration-test/tests/: migration_tests.rs
scripts/: setup-client.sh  setup-preferred.sh  setup-primary.sh
(+40 files in other folders)
